--- a/TW/TW_Engine/TW_Engine.vcxproj
+++ b/TW/TW_Engine/TW_Engine.vcxproj
@@ -70,7 +70,7 @@
     <OutDir>$(ProjectDir)$(Platform)\$(Configuration)\</OutDir>
     <TargetExt>.dll</TargetExt>
     <IntDir>$(Platform)\$(Configuration)\tmp\</IntDir>
-    <TargetName>$(ProjectName)</TargetName>
+    <TargetName>$(ProjectName)d</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
